--- a/public/fantacalcio-auction.html
+++ b/public/fantacalcio-auction.html
@@ -1162,7 +1162,9 @@
         .table-container {
             flex: 1;
             overflow-y: auto;
+            overflow-x: auto;
             min-height: 0;
+            -webkit-overflow-scrolling: touch;
         }
 
         /* Miglioramento responsive - mantieni scroll orizzontale con tabella */
@@ -1170,6 +1172,118 @@
             .team-card {
                 width: 130px;
                 font-size: 0.55rem;
+            }
+        }
+
+        /* BREAKPOINT SPECIFICO PER IPAD (980px) - FIX TABELLA GIOCATORI */
+        @media (max-width: 980px) and (min-width: 769px) {
+            .players-main-section {
+                padding: 0.8rem;
+            }
+            
+            .table-container {
+                border: 1px solid var(--border-color);
+                border-radius: 8px;
+                background: var(--bg-primary);
+            }
+            
+            .players-table {
+                min-width: 900px;
+                font-size: 0.8rem;
+                width: 100%;
+            }
+
+            .players-table th,
+            .players-table td {
+                padding: 0.6rem 0.4rem;
+                white-space: nowrap;
+            }
+
+            .player-name-cell {
+                min-width: 140px;
+                max-width: 140px;
+            }
+
+            .player-name {
+                font-size: 0.85rem;
+                line-height: 1.2;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+
+            .player-team {
+                font-size: 0.75rem;
+            }
+
+            .role-cell {
+                min-width: 75px;
+            }
+
+            .player-role-badge {
+                font-size: 0.75rem;
+                padding: 0.3rem 0.5rem;
+            }
+
+            .tier-cell {
+                min-width: 45px;
+            }
+
+            .fantasy-tier {
+                width: 22px;
+                height: 22px;
+                line-height: 22px;
+                font-size: 0.75rem;
+            }
+
+            .rating-cell {
+                min-width: 70px;
+            }
+
+            .value-cell {
+                min-width: 55px;
+                font-size: 0.85rem;
+            }
+
+            .titolarita-cell {
+                min-width: 110px;
+            }
+
+            .titolarita-bar-mini {
+                width: 45px;
+                height: 5px;
+            }
+
+            .titolarita-text {
+                font-size: 0.75rem;
+            }
+
+            .notes-cell {
+                min-width: 140px;
+                max-width: 140px;
+            }
+
+            .player-note-text {
+                font-size: 0.7rem;
+                line-height: 1.2;
+            }
+
+            .favorite-cell {
+                min-width: 40px;
+            }
+
+            .favorite-btn {
+                font-size: 1rem;
+                padding: 0.1rem;
+            }
+
+            .rigorista-badge,
+            .sold-badge {
+                font-size: 0.6rem;
+                padding: 0.2rem 0.3rem;
+            }
+
+            .mini-badge {
+                font-size: 0.7rem;
             }
         }
 
@@ -1190,6 +1304,117 @@
 
             .budget-amount {
                 font-size: 0.7rem;
+            }
+        }
+
+        /* BREAKPOINT PER TABLET PICCOLI E MOBILE (768px e sotto) - LAYOUT CARD */
+        @media (max-width: 768px) {
+            .players-table {
+                font-size: 0.8rem;
+                display: block;
+                overflow-x: auto;
+                white-space: nowrap;
+                -webkit-overflow-scrolling: touch;
+            }
+
+            .players-table thead,
+            .players-table tbody,
+            .players-table th,
+            .players-table td,
+            .players-table tr {
+                display: block;
+            }
+
+            .players-table thead tr {
+                position: absolute;
+                top: -9999px;
+                left: -9999px;
+            }
+
+            .players-table tr {
+                border: 1px solid var(--border-color);
+                margin-bottom: 0.5rem;
+                border-radius: 8px;
+                background: var(--bg-primary);
+                box-shadow: var(--shadow);
+                padding: 0.8rem;
+                display: block;
+                white-space: normal;
+                position: relative;
+            }
+
+            .players-table td {
+                border: none;
+                border-bottom: 1px solid var(--border-color);
+                position: relative;
+                padding: 0.5rem 0.5rem 0.5rem 30%;
+                white-space: normal;
+                text-align: left;
+                min-height: 2rem;
+                display: flex;
+                align-items: center;
+            }
+
+            .players-table td:before {
+                content: attr(data-label);
+                position: absolute;
+                left: 0.5rem;
+                width: 28%;
+                padding-right: 10px;
+                white-space: nowrap;
+                font-weight: 600;
+                color: var(--text-secondary);
+                font-size: 0.75rem;
+                display: flex;
+                align-items: center;
+            }
+
+            .players-table td:last-child {
+                border-bottom: none;
+            }
+
+            .players-table tr.sold {
+                background: rgba(231, 76, 60, 0.1);
+                border-color: #e74c3c;
+            }
+
+            .players-table tr.selected {
+                background: var(--gradient-primary);
+                color: white;
+            }
+
+            /* Ottimizza gli elementi interni della tabella per mobile */
+            .player-role-badge {
+                font-size: 0.7rem;
+                padding: 0.2rem 0.4rem;
+            }
+
+            .fantasy-tier {
+                width: 20px;
+                height: 20px;
+                line-height: 20px;
+                font-size: 0.7rem;
+            }
+
+            .titolarita-container {
+                flex-direction: column;
+                gap: 0.3rem;
+                align-items: flex-start;
+            }
+
+            .titolarita-bar-mini {
+                width: 100px;
+            }
+
+            .bidding-inline-controls {
+                flex-direction: column;
+                align-items: stretch;
+                gap: 0.5rem;
+            }
+
+            .bid-input-mini,
+            .team-select-mini {
+                width: 100%;
             }
         }
 
